Fix post alignment (#1131)
* Fix post alignment

* refactor: imageslider

---------

--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -50,7 +50,8 @@
 }
 
 .post__background {
-  min-height: 350px;
+  /* min-height: 350px; */
+  height: 350px;
   background: linear-gradient(
     130deg,
     #dee2ed,
